--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,16 @@
 {
   "manifest_version": 2,
-  "name": "好学单词",
+  "name": "shanbay test by zhaojun",
   "version": "0.8.20",
-  "description": "好学单词，简洁易用的英汉字典扩展程序，支持划词哦:)",
+  "description": "扇贝查词，支持划词翻译，登录扇贝账号加入生词本",
 
   "permissions": [
-    "https://dict.youdao.com/*",
-    "https://fanyi.youdao.com/*",
-    "http://dict.youdao.com/*",
-    "http://fanyi.youdao.com/*",
-    "http://dict.xyuu.com.cn/*",
+    //"https://dict.youdao.com/*",
+    //"https://fanyi.youdao.com/*",
+    //"http://dict.youdao.com/*",
+    //"http://fanyi.youdao.com/*",
+    //"http://dict.xyuu.com.cn/*",
+    "http://*/*",
     "http://*.shanbay.com/*",
     "contextMenus",
     "tabs",
